test/org/midica/testfiles/failing/chord-name-like-note.midica
INCLUDE_FILE inc/instruments.midica
CHORD c# c,d,c
